--- a/ClovaDurableSessionSample/ClovaDurableSessionSample.csproj
+++ b/ClovaDurableSessionSample/ClovaDurableSessionSample.csproj
@@ -1,12 +1,16 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <TargetFramework>netcoreapp2.2</TargetFramework>
     <AzureFunctionsVersion>v2</AzureFunctionsVersion>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CEK.CSharp" Version="0.1.7" />
     <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.DurableTask" Version="1.7.1" />
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="1.0.24" />
+  </ItemGroup>
+  <ItemGroup>
+    <Reference Include="ClovaCEKCSharp">
+      <HintPath>..\..\clova-cek-sdk-csharp\clova-cek-sdk-csharp\bin\Debug\netstandard1.3\ClovaCEKCSharp.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <None Update="host.json">
